--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -7,7 +7,25 @@
 
 	<h1>Essa página vai ser massa!</h1>
 	<h2>Um dia...</h2>
-	<h3>Bem vinda, {{Nome}}</h3>
+	<h3>Bem vinda, {{ Nome }}</h3>
+	<a href="{% url 'help'%}">Link para página de ajuda</a>
+
+	<ul>
+		{% for item in lista %}
+			{% if item != "bbb" %} 
+				<li>{{ item }}</li> 
+			{% endif %}
+		{% endfor %}
+	</ul>
+
+	<h3>Membros</h3>
+
+	<ul>
+		{% for membro in membros %}
+				<li>{{ membro.nome }}</li>
+		{% endfor %}
+	</ul>
+
 
 </body>
 </html>
