--- a/content/templates/help.html
+++ b/content/templates/help.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Ai, Didi!!!!!</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 
-	<h1>me acuda...</h1>
+<h1>Esta é a página de ajuda!</h1>
+<p></p>
 
-</body>
-</html>
+<a href="https://www.notion.so/Aulas-Django-cdcdbe396e3a481eb123022f9d70a586#7869bc023dab4c59944530364f4b577a" target="_blank">link para a página de resumo das aulas.</a>
+<p></p>
+
+<a href="https://www.djangoproject.com/" target="_blank">Django</a>
+
+{% endblock %}
