--- a/content/templates/base.html
+++ b/content/templates/base.html
@@ -29,7 +29,7 @@
 
       <main class="mdc-top-app-bar--fixed-adjust">
         {% block content%}
-        {% load staticfiles %}
+        {% load static %}
         {% endblock %}
       </main>
 
