--- a/content/templates/help.html
+++ b/content/templates/help.html
@@ -8,5 +8,9 @@
 <p></p>
 
 <a href="https://www.djangoproject.com/" target="_blank">Django</a>
+<p></p>
+
+<a href="https://material.io/design" target="_blank">Material design</a>
+
 
 {% endblock %}
