--- a/content/templates/duvidas.html
+++ b/content/templates/duvidas.html
@@ -2,10 +2,11 @@
 {% block content %}
 
 <h1>Minhas dúvidas</h1>
-
+<a class="" aria-label="duvidas_forms" href="{% url 'duvidas_forms'%}"> Adicionar nova dúvida</a>
 <ol>
     {% for duvida in duvidas %}
-            <li>{{ duvida.Duvida}} <p> {{duvida.Descricao}} </p> <p> {{duvida.get_Tipo_de_duvida_display}} - {{duvida.dificuldade}} - {{duvida.Date|date:"d/m/Y"}} </p></li> 
+            <li>{{ duvida.Duvida}} <p> {{duvida.Descricao}} </p> 
+                <p> {{duvida.get_Tipo_de_duvida_display}} - {{duvida.dificuldade}} - {{duvida.Date|date:"d/m/Y"}} </p></li> 
     {% endfor %}
 </ol>
 
