--- a/content/templates/duvidas_formulario.html
+++ b/content/templates/duvidas_formulario.html
@@ -1,16 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
 
-<form action="{% url 'duvidas_forms' %}" method="post">
+<form action="{% url 'duvidas_forms' %}" method="post" style="margin: 5% 10%;">
     {% csrf_token %}
-<div>
+    <div class="input-field col s6">
+        <input placeholder="Placeholder" id="Duvida" name="Duvida" type="text" class="validate">
+        <label for="first_name" id="Duvida_label">Qual a sua dúvida?</label>
+    </div>
+
     <label class="mdc-text-field mdc-text-field--outlined">
         <span class="mdc-notched-outline">
-        <span class="mdc-notched-outline__leading"></span>
-        <span class="mdc-notched-outline__notch">
-            <span class="mdc-floating-label" id="Duvida_label">Qual a sua dúvida?</span>
-        </span>
-        <span class="mdc-notched-outline__trailing"></span>
+            <span class="mdc-notched-outline__leading"></span>
+            <span class="mdc-notched-outline__notch">
+                <span class="mdc-floating-label" id="Descricao_label">Descreva a sua dúvida: </span>
+            </span>
+            <span class="mdc-notched-outline__trailing"></span>
         </span>
         <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id" id="Duvida" name="Duvida">
     </label>
