--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -1,13 +1,29 @@
 {% extends "base.html" %}
 {% block content %}
-
-<h3>Bem vinda, {{ Nome }}</h3>
-
+{% load static %}
 
 
+<div class="full-width full-height bg-primary component-1 jumbotron">
+	<h1>Lorem Ipsum</h1>
+	<p class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, molestiae.</p>
+</div>
 
+<div class="full-width full-height bg-white component-1 col-2">
+	<div class="align-vertical">
+		<img src={% static "grandma.png" %} alt="grandma">
+	</div>
+	<div class="align-vertical">
+		<h2>Lorem Ipsum</h2>
+		<p class="subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus asperiores ut soluta consectetur enim! Obcaecati, deserunt enim architecto error iste in consequuntur, minima saepe expedita modi quam neque? Ex, tempore.</p>
+	</div>
+</div>
 
-<p></p>
+<div class="full-width full-height bg-secondary component-1">
+	<h3>Lorem Ipsum</h3>
+	<p class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, molestiae.</p>
+</div>
+
+<!-- <p></p>
 <a href="https://www.laerte.art.br/acervo/?_sfm_decada=2010&sf_paged=2" target="_blank"> Laerte</a>
 <br>
 <p></p>
@@ -27,25 +43,7 @@
 <br>
 <p></p>
 <a href="https://americanaffairsjournal.org/2021/05/the-brazilianization-of-the-world/?fbclid=IwAR2xY9Q0qKs9K2Eay8GFGaeVZ7SUbN3mbaXO_rZV3tOXWsSCydJ9g_ND7L4" target="_blank"> The Brazilianization of the World</a>
-<br>
+<br> -->
 
-
-
-
-<ul>
-	{% for item in lista %}
-	{% if item != "bbb" %}
-	<li>{{ item }}</li>
-	{% endif %}
-	{% endfor %}
-</ul>
-
-<h3>Membros</h3>
-
-<ol>
-	{% for membro in membros %}
-	<li>{{ membro.nome }}</li>
-	{% endfor %}
-</ol>
 
 {% endblock %}
