--- a/content/templates/base.html
+++ b/content/templates/base.html
@@ -7,108 +7,110 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock %}</title>
-  <!-- CSS only -->
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <!-- Bootstrap -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
   <!-- Materialize -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <!-- icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- custom css -->
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
-  <div class="container">
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="{% url 'index'%}">Biblioteca</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'main'%}"> Principal</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'duvidas'%}"> Minhas dúvidas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'help'%}"> Ajuda com Django</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Implementation Research
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="{% url 'implementation'%}"> Topics in Implementation Research</a>
-                </li>
-                <li><a class="dropdown-item" href="{% url 'tools_implementation'%}"> Tools</a></li>
-                <li><a class="dropdown-item" href="{% url 'implementation'%}"> Cuida-APS</a></li>
-                <li><a class="dropdown-item" href="{% url 'implementation'%}"> REDIME & GLICAAVIDA</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Psicometria
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="{% url 'psicometria'%}"> Temas em Psicometria</a></li>
-                <li><a class="dropdown-item" href="{% url 'unasus'%}"> Instrumentos da UNASUS</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                FGV-Municípios
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="{% url 'fgv'%}"> FGV-Municípios</a></li>
-                <li><a class="dropdown-item" href="{% url 'dados_fgv'%}"> Bases de dados</a></li>
-                <li><a class="dropdown-item" href="{% url 'indicadores_fgv'%}"> Nossos indicadores</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                WHO Rehabilitation
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="{% url 'rehab'%}"> Intro and definitions</a></li>
-                <li><a class="dropdown-item" href="{% url 'criterias'%}"> Criterias</a></li>
-                <li><a class="dropdown-item" href="{% url 'duvidas'%}"> Could be done in PHC</a></li>
-                <li><a class="dropdown-item" href="{% url 'duvidas'%}"> Telehealth and technologies</a></li>
-                <li><a class="dropdown-item" href="{% url 'duvidas'%}"> Well-being and QoL </a></li>
-                <li><a class="dropdown-item" href="{% url 'duvidas'%}"> No Integration of Rehabilitation services</a>
-                </li>
-                <li><a class="dropdown-item" href="{% url 'community_dwelling'%}"> Community Dwelling and Homecare</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="{% url 'four_question'%}">Four questions</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
+  <div>
+    <nav class="bg-primary">
+      <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a>
     </nav>
 
-    {% block content %}{% endblock %}
-    <footer></footer>
+    <ul id="slide-out" class="sidenav">
+      <li>
+        <div class="user-view">
+          <div class="background bg-primary">
+          </div>
+          <a href="#user"><img src={% static "M.jpg" %} style="max-width: 100px; border-radius: 50px;"></a>
+
+          <a href="#name"><span class="white-text name">MFC</span></a>
+          <a href="#about"><span class="white-text email">Adelson Guaraci Jantsch</span></a>
+
+        </div>
+      </li>
+      <!-- <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li> -->
+      <li><a href="{% url 'index'%}">Biblioteca</a></li>
+      <li><a href="{% url 'main'%}">Principal</a></li>
+      <li><a href="{% url 'duvidas'%}">Minhas Dúvidas</a></li>
+      <li><a href="{% url 'help'%}">Ajuda com Django</a></li>
+
+      <li>
+        <div class="divider"></div>
+      </li>
+
+      <!-- <li><a class="subheader">Subheader</a></li>
+      <li><a class="waves-effect" href="#!">Third Link With Waves</a></li> -->
+
+      <li><a class="subheader">Implementation Research</a></li>
+      <li><a href="{% url 'implementation'%}"> Topics in Implementation Research</a> </li>
+      <li><a href="{% url 'tools_implementation'%}">Tools</a></li>
+      <li><a href="{% url 'implementation'%}"> Cuida-APS</a></li>
+      <li><a href="{% url 'implementation'%}"> REDIME & GLICAAVIDA</a></li>
+
+      <li>
+        <div class="divider"></div>
+      </li>
+
+      <li><a class="subheader">Psicometria</a></li>
+      <li><a href="{% url 'psicometria'%}"> Temas em Psicometria</a> </li>
+      <li><a href="{% url 'unasus'%}"> Instrumentos da UNASUS</a></li>
+
+      <li>
+        <div class="divider"></div>
+      </li>
+      <li><a class="subheader">FGV-Municípios</a></li>
+      <li><a href="{% url 'fgv'%}"> FGV-Municípios</a> </li>
+      <li><a href="{% url 'dados_fgv'%}"> Bases de dados</a></li>
+      <li><a href="{% url 'indicadores_fgv'%}"> Nossos indicadores</a></li>
+
+      <li>
+        <div class="divider"></div>
+      </li>
+
+      <li><a class="subheader">WHO Rehabilitation</a></li>
+      <li><a href="{% url 'rehab'%}"> Intro and definitions</a> </li>
+      <li><a href="{% url 'criterias'%}"> Criterias</a></li>
+      <li><a href="{% url 'duvidas'%}"> Could be done in PHC</a></li>
+      <li><a href="{% url 'duvidas'%}"> Telehealth and technologies</a> </li>
+      <li><a href="{% url 'duvidas'%}"> Well-being and QoL </a></li>
+      <li><a href="{% url 'duvidas'%}"> No Integration of Rehabilitation services </a></li>
+      <li><a href="{% url 'community_dwelling'%}"> Community Dwelling and Homecare </a></li>
+      <li>
+        <div class="divider"></div>
+      </li>
+      <li><a href="{% url 'four_question'%}">Four questions</a></li>
+
+
+    </ul>
+  </div>
+  {% block content %}{% endblock %}
 
   </div>
   <script src="{% static 'js/scripts.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+
+  <!-- Materialize -->
+  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const elements = document.querySelectorAll('.sidenav');
+      const instances = M.Sidenav.init(elements, {});
+    });
+  </script>
 </body>
 
 </html>
