--- a/content/static/css/style.css
+++ b/content/static/css/style.css
@@ -39,7 +39,7 @@
 
 .container-fluid {
     padding: 0;
-
+    
     
 }
 
@@ -120,6 +120,7 @@ footer p {
     flex-direction: row;
     justify-content: space-around;
     padding: 0 10%;
+    
 }
 
 .icon-large{
@@ -146,3 +147,7 @@ footer p {
     background-position: center;
     width: 80%;
 }
+
+.container {
+    padding-left: 50px;
+  }
