--- a/content/templates/base.html
+++ b/content/templates/base.html
@@ -45,6 +45,7 @@
       <li><a href="{% url 'main'%}">Principal</a></li>
       <li><a href="{% url 'duvidas'%}">Minhas Dúvidas</a></li>
       <li><a href="{% url 'help'%}">Ajuda com Django</a></li>
+      <li><a href="{% url 'paf'%}">Population Attributable Fraction</a></li>
 
       <li>
         <div class="divider"></div>
@@ -95,7 +96,11 @@
 
     </ul>
   </div>
-  {% block content %}{% endblock %}
+  
+  <div class="container">
+    {% block content %}{% endblock %}
+  </div>
+ 
 
   </div>
   <script src="{% static 'js/scripts.js' %}"></script>
