Update no index e nas páginas de dúvidas (listagem e cadastro)

--- a/content/templates/base.html
+++ b/content/templates/base.html
@@ -96,11 +96,11 @@
 
     </ul>
   </div>
-  
-  <div class="container">
+
+  <div>
     {% block content %}{% endblock %}
   </div>
- 
+
 
   </div>
   <script src="{% static 'js/scripts.js' %}"></script>
