--- a/content/templates/duvidas_formulario.html
+++ b/content/templates/duvidas_formulario.html
@@ -2,60 +2,70 @@
 {% block content %}
 
 <form action="{% url 'duvidas_forms' %}" method="post" style="margin: 5% 10%;">
+    <h1>Nova dúvida</h1>
     {% csrf_token %}
+
     <div class="input-field col s6">
-        <input placeholder="Placeholder" id="Duvida" name="Duvida" type="text" class="validate">
-        <label for="first_name" id="Duvida_label">Qual a sua dúvida?</label>
+        <input id="Duvida" name="Duvida" type="text" class="validate" min="10" required>
+        <label for="Duvida" id="Duvida_label">Qual a sua dúvida?</label>
     </div>
 
-    <label class="mdc-text-field mdc-text-field--outlined">
-        <span class="mdc-notched-outline">
-            <span class="mdc-notched-outline__leading"></span>
-            <span class="mdc-notched-outline__notch">
-                <span class="mdc-floating-label" id="Descricao_label">Descreva a sua dúvida: </span>
-            </span>
-            <span class="mdc-notched-outline__trailing"></span>
-        </span>
-        <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id" id="Duvida" name="Duvida">
-    </label>
-</div>
-
-<label class="mdc-text-field mdc-text-field--outlined">
-    <span class="mdc-notched-outline">
-    <span class="mdc-notched-outline__leading"></span>
-    <span class="mdc-notched-outline__notch">
-        <span class="mdc-floating-label" id="Descricao_label">Descreva a sua dúvida: </span>
-    </span>
-    <span class="mdc-notched-outline__trailing"></span>
-    </span>
-    <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id" id="Descricao" name="Descricao" rows="5">
-</label>
+    <div class="input-field col s6">
+        <input type="text" id="Descricao" name="Descricao" class="validate" required>
+        <label for="Descricao" id="Descricao_label">Descreva a sua dúvida:</label>
+    </div>
 
 
-
-    <fieldset>
-        <label for="Tipo_de_duvida">Tipo_de_duvida:</label>
-        <select name="Tipo_de_duvida" id="Tipo_de_duvida">
+    <div class="input-field col s6">
+        <select name="Tipo_de_duvida" id="Tipo_de_duvida" class="validate" required>
             <option value="PYT">Python</option>
             <option value="DJA">Django</option>
             <option value="HTM">HTML</option>
             <option value="CSS">css</option>
-</select>
-    </fieldset>
-    <fieldset>
-        <label for="novidade">Esta é uma dúvida nova? </label>
-        <input type="radio" id="novidade_true" name="novidade" value="True">
-        <label for="TRUE">Sim</label>
-        <input type="radio" id="novidade_false" name="novidade" value="False">
-        <label for="FALSE">Não</label>
-    </fieldset>
-    <fieldset>
+        </select>
+        <label for="Tipo_de_duvida">Tipo de dúvida:</label>
+    </div>
+
+    <div class="input-field col s6">
+        <p>
+            <label>
+                <span>
+                    Esta é uma dúvida nova?
+                </span>
+            </label>
+        </p>
+
+        <p>
+            <label>
+                <input name="novidade" id="novidade_true" type="radio" required/>
+                <span>Sim</span>
+            </label>
+        </p>
+
+        <p>
+            <label>
+                <input name="novidade" id="novidade_false" type="radio" required/>
+                <span>Não</span>
+            </label>
+        </p>
+
+    </div>
+
+    <div class="input-field col s6">
+        <input type="number" id="dificuldade" name="dificuldade" min='1' max='10' class="validate" required>
         <label for="dificuldade">Qual o grau de dificuldade desta sua dúvida? </label>
-        <input type="number" id="dificuldade" name="dificuldade" min='1' max='10'>
-    </fieldset>
-    <input type="submit" value="Inserir">
+    </div>
+
+    <div class="input-field">
+        <input class="btn waves-effect waves-light" type="submit" value="Inserir">
+    </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var elems = document.querySelectorAll('select');
+            var instances = M.FormSelect.init(elems, {});
+        });
+    </script>
 </form>
 
 {% endblock %}
-
-
