--- a/content/templates/base.html
+++ b/content/templates/base.html
@@ -46,6 +46,7 @@
       <li><a href="{% url 'duvidas'%}">Minhas Dúvidas</a></li>
       <li><a href="{% url 'help'%}">Ajuda com Django</a></li>
       <li><a href="{% url 'paf'%}">Population Attributable Fraction</a></li>
+      <li><a href="{% url 'dashboard'%}">Dashboard</a></li>
 
       <li>
         <div class="divider"></div>
