Página de detalhar evento (selecionando da listagem)

--- a/content/static/css/style.css
+++ b/content/static/css/style.css
@@ -147,3 +147,10 @@ footer p {
     background-position: center;
     width: 80%;
 }
+
+.bold{
+    font-weight: bolder;
+}
+.content{
+    margin: 3% 5%;
+}
