--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -63,7 +63,7 @@
 		</div>
 	</div>
 
-	<div>
+	<div class="content">
 		<a href="https://www.laerte.art.br/acervo/?_sfm_decada=2010&sf_paged=2" target="_blank"> Laerte</a>
 		<br>
 		<p></p>
