--- a/content/static/css/style.css
+++ b/content/static/css/style.css
@@ -154,3 +154,9 @@ footer p {
 .content{
     margin: 3% 5%;
 }
+.flex{
+    display: flex;
+}
+.space-between{
+    justify-content: space-between;
+}
